force-app/main/default/objects/Contact_Qualification__c.object
<CustomObject>
    <fields>
        <fullName>API_Callout_Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True - API callout successful, httpresponecode = 200
False - API failed</description>
        <label>API Callout Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Request__c</fullName>
        <description>To capture API Request when a callout is made on qualification record
Also, could be used to trigger callout when the value is manually changed</description>
        <label>API Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Response__c</fullName>
        <description>To capture API response</description>
        <label>API Response</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <description>Field to capture application status</description>
        <label>Application Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Comments__c</fullName>
        <label>Assessment Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendance_Mode__c</fullName>
        <label>Attendance Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Distance Education</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Multi-mode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_Id__c</fullName>
        <description>Used by Alumni Engage Team for Reporting purpose.</description>
        <formula>Contact__r.CRM_Id__c</formula>
        <label>CRM Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>The campus of the qualification.
Note: relevant for Monash Tertiary Education only.</description>
        <label>Campus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AU-PERTH</fullName>
                </value>
                <value>
                    <fullName>Bendigo Campus</fullName>
                </value>
                <value>
                    <fullName>Berwick Campus</fullName>
                </value>
                <value>
                    <fullName>Caulfield Campus</fullName>
                </value>
                <value>
                    <fullName>Caulfield - Indonesia</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Clayton Campus</fullName>
                </value>
                <value>
                    <fullName>Gippsland Campus</fullName>
                </value>
                <value>
                    <fullName>Gippsland - Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Gippsland - Singapore</fullName>
                </value>
                <value>
                    <fullName>Hong Kong Space Centre for Int&apos;l Degree Programs</fullName>
                </value>
                <value>
                    <fullName>Indonesian Campus</fullName>
                </value>
                <value>
                    <fullName>Latrobe Regional Hospital Moe</fullName>
                </value>
                <value>
                    <fullName>Leongatha Campus</fullName>
                </value>
                <value>
                    <fullName>Macau (OS)</fullName>
                </value>
                <value>
                    <fullName>Malaysia Campus</fullName>
                </value>
                <value>
                    <fullName>MBA-IPMI</fullName>
                </value>
                <value>
                    <fullName>Mildura Campus</fullName>
                </value>
                <value>
                    <fullName>Mt Eliza</fullName>
                </value>
                <value>
                    <fullName>Os Macau Campus</fullName>
                </value>
                <value>
                    <fullName>Overseas-HK</fullName>
                </value>
                <value>
                    <fullName>Overseas-Malaysia</fullName>
                </value>
                <value>
                    <fullName>Overseas-Papua New Guinea</fullName>
                </value>
                <value>
                    <fullName>Overseas-Singapore</fullName>
                </value>
                <value>
                    <fullName>Overseas - Suzhou Campus</fullName>
                </value>
                <value>
                    <fullName>Overseas-USA</fullName>
                </value>
                <value>
                    <fullName>Parkville Campus</fullName>
                </value>
                <value>
                    <fullName>Parkville Campus (Pharmacy)</fullName>
                </value>
                <value>
                    <fullName>Peninsula Campus</fullName>
                </value>
                <value>
                    <fullName>South Africa Campus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CertifiedStatus__c</fullName>
        <description>Capture the status of certification</description>
        <label>Certified status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Certified</fullName>
                </value>
                <value>
                    <fullName>Uncertified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Monash internal award code (Callista reference data) or external course code (license number etc.)</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <description>Commencement Date of the qualification</description>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Withdrawal_Date__c</fullName>
        <description>Completion/Withdrawal Date of the qualification</description>
        <label>Completion/Withdrawal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Qualifications</relationshipLabel>
        <relationshipName>Contact_Qualifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Contribution_Percentage__c</fullName>
        <description>Contribution Percentage</description>
        <label>Contribution Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_List_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Attempt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Attempt</label>
        <referenceTo>Course_Attempt__c</referenceTo>
        <relationshipLabel>Contact Qualifications</relationshipLabel>
        <relationshipName>Contact_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Length__c</fullName>
        <description>Course duration</description>
        <label>Course Length</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Achieved__c</fullName>
        <label>Date Achieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree_Level__c</fullName>
        <label>Degree Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Diploma</fullName>
                </value>
                <value>
                    <fullName>Associate Degree</fullName>
                </value>
                <value>
                    <fullName>Associate Diploma</fullName>
                </value>
                <value>
                    <fullName>Bachelor</fullName>
                </value>
                <value>
                    <fullName>Bachelor Honours Degree</fullName>
                </value>
                <value>
                    <fullName>Bachelors Graduate Entry</fullName>
                </value>
                <value>
                    <fullName>Bachelor&apos;s Graduate Entry</fullName>
                </value>
                <value>
                    <fullName>Certificate (not graduate certificate)</fullName>
                </value>
                <value>
                    <fullName>Cross Institutional Undergrad</fullName>
                </value>
                <value>
                    <fullName>Diploma</fullName>
                </value>
                <value>
                    <fullName>Doctorate</fullName>
                </value>
                <value>
                    <fullName>Graduate Certificate</fullName>
                </value>
                <value>
                    <fullName>Graduate Diploma</fullName>
                </value>
                <value>
                    <fullName>Higher Doctorate</fullName>
                </value>
                <value>
                    <fullName>Higher Education Certificate Sth Africa</fullName>
                </value>
                <value>
                    <fullName>Juris Doctor</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Postgraduate Diploma</fullName>
                </value>
                <value>
                    <fullName>Study Abroad Postgrad</fullName>
                </value>
                <value>
                    <fullName>Study Abroad Undergrad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <label>Degree Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Diploma (Aqf Terminlgy)/Diploma(Pre-Aqf T</fullName>
                </value>
                <value>
                    <fullName>Bachelors Graduate Entry</fullName>
                </value>
                <value>
                    <fullName>Bachelors Honours</fullName>
                </value>
                <value>
                    <fullName>Bachelors Honours (1 Year)</fullName>
                </value>
                <value>
                    <fullName>Bachelors Honours (4+ Years)</fullName>
                </value>
                <value>
                    <fullName>Bachelors Pass</fullName>
                </value>
                <value>
                    <fullName>Cic Program For Undergraduate Courses</fullName>
                </value>
                <value>
                    <fullName>Coursework (Masters or PhD)</fullName>
                </value>
                <value>
                    <fullName>Diploma (Aqf Terminlgy)/Associate Diploma(Pre-Aqf</fullName>
                </value>
                <value>
                    <fullName>Doctorate By Research</fullName>
                </value>
                <value>
                    <fullName>Graduate Certificate</fullName>
                </value>
                <value>
                    <fullName>Graduate Diploma - New Study</fullName>
                </value>
                <value>
                    <fullName>Graduate Diploma - Previous Study</fullName>
                </value>
                <value>
                    <fullName>Graduate Diploma/Postgraduate Diploma  -  New Stud</fullName>
                </value>
                <value>
                    <fullName>Graduate Diploma/Postgraduate Diploma  -  Previous</fullName>
                </value>
                <value>
                    <fullName>Higher Certificate In Higher Education Msa</fullName>
                </value>
                <value>
                    <fullName>Masters By Coursework</fullName>
                </value>
                <value>
                    <fullName>Masters By Coursework - Msa</fullName>
                </value>
                <value>
                    <fullName>Masters By Research</fullName>
                </value>
                <value>
                    <fullName>Postgraduate Diploma - Monash South Africa</fullName>
                </value>
                <value>
                    <fullName>Postgraduate Diploma - New Study</fullName>
                </value>
                <value>
                    <fullName>Postgraduate Diploma - Previous Study</fullName>
                </value>
                <value>
                    <fullName>Research (Masters or PhD)</fullName>
                </value>
                <value>
                    <fullName>Study Abroad Pg</fullName>
                </value>
                <value>
                    <fullName>Study Abroad Ug</fullName>
                </value>
                <value>
                    <fullName>Undergrad Honours Degree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Research component description for GR applications</description>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration</description>
        <label>Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address linked to qualification</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>English_Band__c</fullName>
        <label>English Band</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Below Monash Minimum</fullName>
                </value>
                <value>
                    <fullName>Diploma of Arts Part 1</fullName>
                </value>
                <value>
                    <fullName>Diploma Part 1 (except Arts)</fullName>
                </value>
                <value>
                    <fullName>Diploma Part 1A</fullName>
                </value>
                <value>
                    <fullName>Diploma Part 2</fullName>
                </value>
                <value>
                    <fullName>Level A</fullName>
                </value>
                <value>
                    <fullName>Level B</fullName>
                </value>
                <value>
                    <fullName>Level C</fullName>
                </value>
                <value>
                    <fullName>Level D</fullName>
                </value>
                <value>
                    <fullName>Level E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>English_Proficiency__c</fullName>
        <description>MGROI-331: New field to capture English Proficiency Requirements</description>
        <label>English Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FIRST-LANG</fullName>
                    <label>English is my first language</label>
                </value>
                <value>
                    <fullName>TEST-DONE</fullName>
                    <label>I have undertaken an English test</label>
                </value>
                <value>
                    <fullName>TEST-TODO</fullName>
                    <label>I will be undertaking an English test</label>
                </value>
                <value>
                    <fullName>ENG-STUDY</fullName>
                    <label>I have completed studies in English at another institution</label>
                </value>
                <value>
                    <fullName>MONASH-OS</fullName>
                    <label>I have completed studies at a Monash campus</label>
                </value>
                <value>
                    <fullName>ELBP-DONE</fullName>
                    <label>I have completed an English test together with the Monash English Program for postgraduate studies</label>
                </value>
                <value>
                    <fullName>ELBP-TODO</fullName>
                    <label>I wish to be considered for an English language program if I cannot meet the University&apos;s English language requirement</label>
                </value>
                <value>
                    <fullName>NONE</fullName>
                    <label>I do not satisfy the English language proficiency requirements</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>English_Test_Expiry_Date__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Date_Achieved__c + validity (driven by the test provider)</description>
        <formula>IF(
    OR(
        CONTAINS( Qualification_Name__c , &quot;IELTS&quot;),
        CONTAINS( Qualification_Name__c , &quot;Pearson&quot;)
    ),
    DATE(YEAR( Date_Achieved__c ) + 3, MONTH(Date_Achieved__c), DAY(Date_Achieved__c)),
    IF(
        CONTAINS( Qualification_Name__c , &quot;TOEFL&quot;),
        DATE(YEAR(Date_Achieved__c) + 2, MONTH(Date_Achieved__c), DAY(Date_Achieved__c)),
        NULL
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>English Test Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>English_Test_Number__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Contains the English Test Number</description>
        <label>English Test Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English_Type_Test__c</fullName>
        <label>English Type Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAE</fullName>
                    <label>CAE: Certificate in Advanced English</label>
                </value>
                <value>
                    <fullName>CPE</fullName>
                    <label>CPE: Certificate of Proficiency in English</label>
                </value>
                <value>
                    <fullName>IELTS</fullName>
                    <label>IELTS: IELTS (International English Language Testing Service)</label>
                </value>
                <value>
                    <fullName>ITOEFL</fullName>
                    <label>ITOEFL: Internet Based TOEFL (Test Of English as a Foreign Language)</label>
                </value>
                <value>
                    <fullName>MEPT</fullName>
                    <label>MEPT: Monash English Language Placement test- MUELC ONLY</label>
                </value>
                <value>
                    <fullName>PTOEFL</fullName>
                    <label>PTOEFL: Paper Based TOEFL (Test Of English as a Foreign Language)</label>
                </value>
                <value>
                    <fullName>PTE</fullName>
                    <label>PTE: Pearson Test of English (Academic)</label>
                </value>
                <value>
                    <fullName>CET-6</fullName>
                    <label>CET-6: COLLEGE ENGLISH TEST CHINA- FOR-NON ENGLISH MAJORS</label>
                </value>
                <value>
                    <fullName>GAMSAT</fullName>
                    <label>GAMSAT: GRADUATE AUSTRALIAN MEDICAL SCHOOL ADMISSION TEST (GAMSAT)</label>
                </value>
                <value>
                    <fullName>IAP</fullName>
                    <label>IAP: ENGLISH FOR INTRODUCTORY ACADEMIC PROGRAM</label>
                </value>
                <value>
                    <fullName>LOI</fullName>
                    <label>LOI: LANGUAGE OF INSTRUCTION FOR TERTIARY STUDY</label>
                </value>
                <value>
                    <fullName>ME</fullName>
                    <label>ME: MONASH ENGLISH</label>
                </value>
                <value>
                    <fullName>MEB10</fullName>
                    <label>MEB10: MONASH ENGLISH BRIDGING - 10 WEEKS</label>
                </value>
                <value>
                    <fullName>MEB15</fullName>
                    <label>MEB15: MONASH ENGLISH BRIDGING - 15 WEEKS</label>
                </value>
                <value>
                    <fullName>MEB17</fullName>
                    <label>MEB17: MONASH ENGLISH BRIDGING - 17 WEEKS</label>
                </value>
                <value>
                    <fullName>MEB20</fullName>
                    <label>MEB20: MONASH ENGLISH BRIDGING - 20 WEEKS</label>
                </value>
                <value>
                    <fullName>MUET</fullName>
                    <label>MUET: MALAYSIAN UNIVERSITY ENGLISH TEST</label>
                </value>
                <value>
                    <fullName>NET</fullName>
                    <label>NET: NATIONAL ENGLISH AS A FOREIGN LANGUAGE TEST IN CHINA</label>
                </value>
                <value>
                    <fullName>STAT</fullName>
                    <label>STAT: SPECIAL TERTIARY ADMISSIONS TEST</label>
                </value>
                <value>
                    <fullName>TEM-8</fullName>
                    <label>TEM-8: COLLEGE ENGLISH TEST CHINA- FOR ENGLISH MAJORS</label>
                </value>
                <value>
                    <fullName>UMAT</fullName>
                    <label>UMAT: UNDERGRADUATE MEDICINE &amp; HEALTH SCIENCES ADMISSION TEST</label>
                </value>
                <value>
                    <fullName>UNITS</fullName>
                    <label>UNITS: 2 UNIVERSITY UNITS (AT LEAST 1 UNIT ENGLISH RICH)</label>
                </value>
                <value>
                    <fullName>VCE-Y11</fullName>
                    <label>VCE-Y11: UNITS 1&amp;2 VCE ENGLISH OR YR11 EQUIV.(FOUNDATION COURSE ONLY)</label>
                </value>
                <value>
                    <fullName>VCE-Y12</fullName>
                    <label>VCE-Y12: 25 IN UNITS 3 &amp; 4 VCE ENGLISH OR EQUIVALENT</label>
                </value>
                <value>
                    <fullName>CTOEFL</fullName>
                    <isActive>false</isActive>
                    <label>CTOEFL: Computer Based TOEFL (Test Of English as a Foreign Language)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>English_doc_required_during_assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For GR application id there is English doc required during assessment then this checkbox will be ticked</description>
        <label>English doc required during assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Essay_Rating__c</fullName>
        <description>Stores Essay Rating score</description>
        <inlineHelpText>Stores Essay Rating score</inlineHelpText>
        <label>Essay Rating</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evidence_Type__c</fullName>
        <description>Evidence Type of qualification</description>
        <label>Evidence Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PHD</fullName>
                    <label>PhD or Professional Doctorate</label>
                </value>
                <value>
                    <fullName>MASTER-RES</fullName>
                    <label>Masters by Research (66 - 100% Research Component)</label>
                </value>
                <value>
                    <fullName>MASTER-65</fullName>
                    <label>Masters (51 - 65% Research Component)</label>
                </value>
                <value>
                    <fullName>MASTER-CW</fullName>
                    <label>Masters (50-100% Coursework Component)</label>
                </value>
                <value>
                    <fullName>M-PRELIM</fullName>
                    <label>Master Preliminary</label>
                </value>
                <value>
                    <fullName>POST-DIP</fullName>
                    <label>Postgraduate Diploma</label>
                </value>
                <value>
                    <fullName>GRAD-DIP</fullName>
                    <label>Graduate Diploma</label>
                </value>
                <value>
                    <fullName>H1</fullName>
                    <label>Bachelors Degree Honours 1 (First Class)</label>
                </value>
                <value>
                    <fullName>H2A</fullName>
                    <label>Bachelors Degree Honours 2 (Second Class - upper) or equivalent</label>
                </value>
                <value>
                    <fullName>H2B</fullName>
                    <label>Bachelors Degree Honours 2 (Second Class - lower) or equivalent</label>
                </value>
                <value>
                    <fullName>H3</fullName>
                    <label>Bachelors Degree Honours 3 (Third Class) or equivalent</label>
                </value>
                <value>
                    <fullName>H-INCOMPLT</fullName>
                    <label>Bachelors Degree Honours (Not Yet Completed)</label>
                </value>
                <value>
                    <fullName>BACHELOR</fullName>
                    <label>Bachelors Degree (ungraded or pass)</label>
                </value>
                <value>
                    <fullName>DIPLOMA</fullName>
                    <label>Undergraduate Diploma</label>
                </value>
                <value>
                    <fullName>AUSAID</fullName>
                    <label>Australian Awards Scholarship (formerly AusAID)</label>
                </value>
                <value>
                    <fullName>APA</fullName>
                    <label>Australian Postgraduate Award (APA)</label>
                </value>
                <value>
                    <fullName>ES</fullName>
                    <label>Endeavour Scholarship</label>
                </value>
                <value>
                    <fullName>IPRS</fullName>
                    <label>International Postgraduate Research Scholarship (IPRS)</label>
                </value>
                <value>
                    <fullName>MDS</fullName>
                    <label>Monash Departmental Scholarship</label>
                </value>
                <value>
                    <fullName>MGS</fullName>
                    <label>Monash Graduate Scholarship (MGS)</label>
                </value>
                <value>
                    <fullName>MIPRS</fullName>
                    <label>Monash International Postgraduate Research Scholarship (MIPRS)</label>
                </value>
                <value>
                    <fullName>MRS</fullName>
                    <label>Monash Research Scholarship</label>
                </value>
                <value>
                    <fullName>RTPS</fullName>
                    <label>RTP Stipend</label>
                </value>
                <value>
                    <fullName>RTPF</fullName>
                    <label>RTP Fees Offset</label>
                </value>
                <value>
                    <fullName>MT-COMPOSE</fullName>
                    <label>Composition</label>
                </value>
                <value>
                    <fullName>MT-PERFORM</fullName>
                    <label>Music Performance</label>
                </value>
                <value>
                    <fullName>BOOK</fullName>
                    <label>Book</label>
                </value>
                <value>
                    <fullName>CHAPTER</fullName>
                    <label>Book Chapter</label>
                </value>
                <value>
                    <fullName>ARTICLE</fullName>
                    <label>Journal Article</label>
                </value>
                <value>
                    <fullName>CONF-PAPER</fullName>
                    <label>Conference Paper</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_date_of_completion__c</fullName>
        <inlineHelpText>Approximately when do you expect to complete your education and receive your qualification?</inlineHelpText>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID for external clients - will be the name of the Contact Qualification record</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Name__c</fullName>
        <formula>Faculty__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Faculty Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Managing/owning) faculty of the qualification (for university degrees).
Note: relevant for Monash Tertiary Education only.</description>
        <label>Faculty</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Faculty</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Qualifications (Organization)</relationshipLabel>
        <relationshipName>Contact_Qualifications1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>